--- a/css/food.css
+++ b/css/food.css
@@ -51,13 +51,7 @@ body{
 
 p{
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 174%;
-    letter-spacing: 0.055em;
-    color: #FFFFFF;
+    
 }
 
  /* Rectangle 2 */
@@ -119,4 +113,18 @@ p{
     top: 32% ;
     bottom: 22%;
     right: 52%;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 174%;
+    letter-spacing: 0.055em;
+    color: #FFFFFF;
+}
+
+.sm{
+    list-style-type: none ;
+    position: absolute;
+    left: 85%;
+    
 }
